A E N D E R U N G E N

Version 01.02.09

    16.02.2021  Die ScreenSaver-Erkennung funktionierte nicht mehr richtig. Dadurch wurde immer
                bei einem GUI-befehl der Back-Button genutzt, obgleich er der richtige Screen
                in Wirklichkeit ausgewählt war und ein Klick in den Bildschirm gereicht hätte. 

    14.01.2021  MustBeWhite der  Screen-Idenitifikation war beim Screen "Anlagenstatus-HK"
                fälschlicherweise nicht in den Identification-Tag geschrieben. Durch ein
                Fehler im xsd-File wurde das nicht erkannt.
                Dadurch kann bei bestimmten Anlagenkonfigurationen das Learning nicht
                eindeutig sein.

    12.01.2021  Für den SelctScreen-Befehl dürfen nur Screens auswählbar sein, deren Attribut
                "noRestore" nicht gesetzt ist.
                
                FHEM-Modul: Die Log-Ausgabe bei einem Command-Error erhält nun die
                Fehlerbeschreibung



Version 01.02.08

    25.12.2020  Icon für Startmenü hinzugefügt, Innosetup entsprechend geändert

    23.12.2020  Eine Debugging-Hilfe eingebaut, welche man mit DEBUG_ENABLE un DEBUG_DISABLE
                steuern kann.
                    

    21.12.2020  Einge Screens wegen besserer Lesbarkeit unbenannt
    
                Mqtt-Meta-Beschreibung der Screens sortiert
                

    20.12.2020  Manchmal auftretendes Dead-Problem beim Server-Start im Zusammenhang mit der
                MQTT-Schnittstelle behoben.
                

    11.12.2020  Command "SelectScreen" funktionierte noch nicht ueber die MQTT-Schnittstelle.
    
                Beim Anfahren des Anlagenstatus gab es im Log noch eine falsche Fehlermeldung.

    08.12.2020  Im Falle eines Anwender-/Service-Zugriffs entstanden seit Version 01.02.04 
                fehlerhafte Error-Messages. 
    
                Heizungskreise Installateur: Ignore-Felder fehlten noch.
