@@ -91,6 +91,8 @@
 				</annotation>
 				<restriction base="string">
 					<enumeration value="SolvisMax"></enumeration>
+					<enumeration value="SolvisMax6"></enumeration>
+					<enumeration value="SolvisMax7"></enumeration>
 					<enumeration value="SolvisBen"></enumeration>
 				</restriction>
 			</simpleType>
